syntax = "proto3";
package rua.teddy.v1;
import "google/protobuf/timestamp.proto";

// import "message.proto";

service TeddyService {
  rpc SendMessage(SendMessageReq) returns (SendMessageRep);
}

message SendMessageReq { Message message = 1; }

message SendMessageRep {}

message Message {
  Header header = 1;
  bytes body = 2;
}

message Header {
  int64 id = 1;
  int64 target_id = 2;
  google.protobuf.Timestamp send_time = 3;
}